forgot to save some. there's one that got the name of the class under test wrong. I also had to add the missing import manually